--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3.9"
 
 services:
 
-  #dash:
-  #  build:
-  #    context: .
-  #    dockerfile: Dockerfile.dash
-  #  restart: unless-stopped
-  #  expose:
-  #    - "8050"   # internal only (Nginx talks to this)
+  dash:
+    build:
+      context: .
+      dockerfile: Dockerfile.dash
+    restart: unless-stopped
+    expose:
+      - "8050"   # internal only (Nginx talks to this)
     # If your Dash app reads files, mount them as needed:
     # volumes:
     #   - ./apps:/app/apps:ro
