--- a/nginx.conf
+++ b/nginx.conf
@@ -12,23 +12,23 @@ server {
 
     # Proxy everything under /apps/ to the Dash container
     
-#    location /apps/ {
- #       proxy_pass http://dash:8050/apps/;
-#
- #       proxy_http_version 1.1;
-  #      proxy_set_header Host $host;
-   #     proxy_set_header X-Real-IP         $remote_addr;
-    #    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-     #   proxy_set_header X-Forwarded-Proto $scheme;
+    location /apps/ {
+        proxy_pass http://dash:8050/apps/;
+
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
         # WebSocket/long-polling support
-#        proxy_set_header Upgrade $http_upgrade;
- #       proxy_set_header Connection "upgrade";
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
 
-#        # Optional timeouts
- #       proxy_read_timeout 300s;
-  #      proxy_send_timeout 300s;
-   # }
+        # Optional timeouts
+        proxy_read_timeout 300s;
+        proxy_send_timeout 300s;
+    }
     
 
     # (Optional) gzip static content
